Java 8 features 1. Functional interface 2. Lambda expression 3. static and default methods 4. stream apis and working flow 5. method reference and record in java 14